2013-06-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_hold_ball2008.cpp:
	- 敵が全方位移動した場合を考慮した妨害判定を行うように修正

	* rcsc/player/self_intercept_simulator.cpp:
	- 念の為，ダッシュ方向の正規化しておくように修正

2013-06-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/neck_scan_field.cpp:
	- ゴーストプレイヤが存在する場合はプレイヤを無視して全方位で首の向
	きの候補を探すように変更
	- ゴーストプレイヤと判定するのは自分との距離が30m以内のプレイヤに限定

2013-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/basic_actions.cpp:
	* rcsc/action/neck_scan_players.cpp:
	- 首角度の範囲制限のバグを修正．[min_neck_angle,max_neck_angle]に
	確実に収まるように範囲チェックを追加

2013-06-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/intercept_table.cpp:
	- 自分の最短インターセプトステップ数更新処理のバグを修正

2013-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.cpp:
	* rcsc/player/world_model.cpp:
	- セットプレイ時のボール情報更新処理をBallObject内に統一
	- キックイン・コーナーキック時にボールに充分近い場合は自分が観た情報を優先するように変更

2013-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- ボール速度推定の不具合を修正

	* rcsc/action/kick_table.cpp:
	- キャッシュしておくパスの最大数を256から1024に変更
	- デバッグ出力用の関数追加

2013-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	- 同一タイプか比較する関数にActionTypeの一致を判定する条件を追加

	* rcsc/player/self_intercept_simulator.cpp:
	- 体の向きの計算誤りを修正

	* rcsc/player/world_model.cpp:
	- 3ステップの位置差分によるボール速度の信頼性を2から3に変更

2013-06-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 自分がボールを蹴っている場合は位置差分による強制ボール速度更新を
	適用しないように条件を追加

	* rcsc/action/body_intercept2009.cpp:
	* rcsc/player/intercept_table.cpp:
	* rcsc/player/intercept_table.h:
	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/self_intercept_v13.cpp:
	- InterceptInfo::ModeをInterceptInfo::StaminaTypeへリネーム
	- InterceptInfo::TypeをInterceptInfo::ActionTypeへリネーム
	- InterceptInfoのステップ数取得関数としてreachStep(), turnStep(),
	dashStep()を追加．既存のxxxCycle()も利用可能

	* rcsc/player/self_intercept_simulator.cpp: